--- a/templates/actor/parts/equip-weapon.hbs
+++ b/templates/actor/parts/equip-weapon.hbs
@@ -26,7 +26,9 @@
 	{{localize (concat "ULTIMA.damageTypes." item.system.damage.type)}}
 </span>
 
-<a class="button" data-action="equipItem" data-uuid="{{item.uuid}}" data-tooltip="Disequipaggia">
-	<i class="fa fa-shield-halved"></i>
-</a>
-<a class="button" data-uuid="{{item.uuid}}" data-link>Apri</a>
+{{#unless (eq item.system.ultimaID ULTIMA.ItemsIDs.unarmedStrike)}}
+	<a class="button" data-action="equipItem" data-uuid="{{item.uuid}}" data-tooltip="Disequipaggia">
+		<i class="fa fa-shield-halved"></i>
+	</a>
+	<a class="button" data-uuid="{{item.uuid}}" data-link>Apri</a>
+{{/unless}}
