--- a/templates/item/item-class-main.hbs
+++ b/templates/item/item-class-main.hbs
@@ -2,7 +2,7 @@
     <fieldset>
         <div class="form-group">
             <label for="system.level.current">Livello</label>
-            <input type="number" name="system.level.current" id="system.level.current" value="{{system.level.current}}" readonly />
+            <input type="number" name="system.level.current" id="system.level.current" value="{{system.level.current}}" />
         </div>
         <div class="form-group">
             <label for="system.level.max">Livello massimo</label>
