--- a/templates/app/parts/charactermancer-actor-classes.hbs
+++ b/templates/app/parts/charactermancer-actor-classes.hbs
@@ -1,5 +1,5 @@
 {{#each gameClasses as |class|}}
-	<div class="form-group" style="{{#if (eq (lookup ../classes.levels class.system.ultimaID) (lookup ../classes.maxLevels class.system.ultimaID))}}opacity:.5;{{/if}}">
+	<div class="form-group" style="{{#if (or (eq (lookup ../classes.levels class.system.ultimaID) (lookup ../classes.maxLevels class.system.ultimaID)) (and (gte ../classes.selected 3) (not (lookup ../actorItems.classes class.system.ultimaID))))}}opacity:.5;{{/if}}">
 		<label class="form-fields" style="justify-content:flex-start;" for="levelUp.class-{{class.system.ultimaID}}">
 			<a class="button" data-uuid="{{class.uuid}}" data-link>
 				{{class.name}}
@@ -26,7 +26,7 @@
 				id="levelUp.class-{{class.system.ultimaID}}" 
 				value="{{class.system.ultimaID}}"
 				{{#if (eq ../formData.levelUp.class class.system.ultimaID)}}checked{{/if}}
-				{{#if (eq (lookup ../classes.levels class.system.ultimaID) (lookup ../classes.maxLevels class.system.ultimaID))}}disabled{{/if}}
+				{{#if (or (eq (lookup ../classes.levels class.system.ultimaID) (lookup ../classes.maxLevels class.system.ultimaID)) (and (gte ../classes.selected 3) (not (lookup ../actorItems.classes class.system.ultimaID))))}}disabled{{/if}}
 			/>
 		</div>
 	</div>
